<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.openmrs.module</groupId>
		<artifactId>sisrme-etl</artifactId>
		<version>1.0</version>
	</parent>
	
	<properties>
		<java.version>1.8</java.version>
		<maven.compiler.target>1.8</maven.compiler.target>
	    <maven.compiler.source>1.8</maven.compiler.source>
	</properties>

	<artifactId>sisrme-etl-api</artifactId>
	<packaging>jar</packaging>
	<name>Epts ETL Module API</name>
	<description>API project for SISRME-Etl</description>
		
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>

		<!-- Begin OpenMRS core -->
		
		<dependency>
			<groupId>org.openmrs.api</groupId>
			<artifactId>openmrs-api</artifactId>
			<type>jar</type>
		    <exclusions>
		        <exclusion>
		            <groupId>org.slf4j</groupId>
		            <artifactId>slf4j-log4j12</artifactId>
		        </exclusion>
			    <exclusion>
		            <groupId>org.slf4j</groupId>
		            <artifactId>jcl-over-slf4j</artifactId>
		        </exclusion>	      
		    </exclusions>	
		</dependency>
				
		<dependency>
			<groupId>org.openmrs.api</groupId>
			<artifactId>openmrs-api</artifactId>
		    <exclusions>
		        <exclusion>
		            <groupId>org.slf4j</groupId>
		            <artifactId>slf4j-log4j12</artifactId>
		        </exclusion>
			    <exclusion>
		            <groupId>org.slf4j</groupId>
		            <artifactId>jcl-over-slf4j</artifactId>
		        </exclusion>	      
		    </exclusions>				
			<type>test-jar</type>
		</dependency>
		
		<!-- End OpenMRS core -->
		
		<dependency>
		    <groupId>com.microsoft.sqlserver</groupId>
		    <artifactId>mssql-jdbc</artifactId>
		    <version>12.3.1.jre8-preview</version>
		</dependency>

		<dependency>
		    <groupId>org.postgresql</groupId>
		    <artifactId>postgresql</artifactId>
		    <version>42.6.0</version>
		   	<scope>provided</scope>
		</dependency>
		
		<dependency>
		  <groupId>com.fasterxml.jackson.core</groupId>
		  <artifactId>jackson-core</artifactId>
		  <version>2.9.6</version>
		</dependency>
		
		<dependency>
		  <groupId>com.fasterxml.jackson.core</groupId>
		  <artifactId>jackson-annotations</artifactId>
		  <version>2.9.6</version>
		</dependency>
		
		<dependency>
		  <groupId>com.fasterxml.jackson.core</groupId>
		  <artifactId>jackson-databind</artifactId>
		  <version>2.9.6</version>
		</dependency>
		
		<dependency>
		    <groupId>javax.ws.rs</groupId>
		    <artifactId>javax.ws.rs-api</artifactId>
		    <version>2.0.1</version>
		</dependency>
		
		<dependency>
		    <groupId>commons-logging</groupId>
		    <artifactId>commons-logging</artifactId>
		    <version>1.2</version>
		</dependency>
				 
		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-lang3</artifactId>
		    <version>3.0</version>
		</dependency>
		<dependency>
		    <groupId>mysql</groupId>
		    <artifactId>mysql-connector-java</artifactId>
		    <version>8.0.33</version>
		</dependency>	
		<dependency>
		    <groupId>com.oracle.database.jdbc</groupId>
		    <artifactId>ojdbc6</artifactId>
		    <version>11.2.0.4</version>
		</dependency>
		<dependency>
			 <groupId>commons-fileupload</groupId>
			 <artifactId>commons-fileupload</artifactId>
			 <version>1.3.1</version>
		</dependency>
		<dependency>
		    <groupId>commons-io</groupId>
		    <artifactId>commons-io</artifactId>
		    <version>2.5</version>
		</dependency>
		
		<dependency>
		    <groupId>org.apache.tomcat</groupId>
		    <artifactId>tomcat-jdbc</artifactId>
		    <version>7.0.35</version>
		</dependency>	
		
		 <dependency>
	        <groupId>ch.qos.logback</groupId>
	        <artifactId>logback-classic</artifactId>
	    </dependency>
	
	    <dependency>
	        <groupId>org.slf4j</groupId>
	        <artifactId>slf4j-api</artifactId>
	    </dependency>
		<dependency>
	        <groupId>joda-time</groupId>
	        <artifactId>joda-time</artifactId>
	        <version>2.10.10</version>
	    </dependency>	
	    
	   <dependency>
		    <groupId>net.objecthunter</groupId>
		    <artifactId>exp4j</artifactId>
		    <version>0.4.8</version>
		</dependency> 	   
	</dependencies>
	
	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>

		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
				<filtering>true</filtering>
			</testResource>
		</testResources>
		
		<plugins>
			<plugin>
			  <groupId>org.apache.maven.plugins</groupId>
			  <artifactId>maven-shade-plugin</artifactId>
			  <version>2.3</version>
			  <executions>
			     <!-- Run shade goal on package phase -->
			    <execution>
					<phase>package</phase>
					<goals>
						<goal>shade</goal>
					</goals>
					
					<configuration>
						 <createDependencyReducedPom>false</createDependencyReducedPom>
						  <transformers>
									<!-- add Main-Class to manifest file -->
			                    <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
								<mainClass>org.openmrs.module.epts.etl.Main</mainClass>
							</transformer>
						  </transformers>
						<filters>
				          <filter>
				            <artifact>*:*</artifact>
				            <excludes>
				              <exclude>META-INF/*.SF</exclude>
				              <exclude>META-INF/*.DSA</exclude>
				              <exclude>META-INF/*.RSA</exclude>
				            </excludes>
				          </filter>
				        </filters>		  
					</configuration>
			      </execution>
			  </executions>
			</plugin>
	        
		</plugins>
	</build>

</project>
